Fixed typos, added twitter button

--- a/templates/_app.html
+++ b/templates/_app.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>How fucked is my web app?</title>
     <style>
       body {
         font-family: Helvetica, Arial, Verdana, sans-serif;
@@ -23,5 +24,9 @@
   <body>
     {% block body %}
     {% endblock %}
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="LionelBarrow">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+    <div id="small">All credit to <a href="http://howfuckedismydatabase.com/">http://howfuckedismydatabase.com<a></div>
   </body>
 </html>
