--- a/templates/php/no_facebook.html
+++ b/templates/php/no_facebook.html
@@ -2,6 +2,6 @@
 {% block body %}
 <h1>You're completely and totally fucked</h1>
 <h3>But if you want to blog about it, I hear WordPress is nice</h3>
-"PHP Patches Actively Exploited CGI Vulnerability"</br>
-"PHP Working on New Patch for Critical Vulnerability After Initial One Failed"
+<p><a href="http://www.pcworld.com/article/255289/php_patches_actively_exploited_cgi_vulnerability.html">PHP Patches Actively Exploited CGI Vulnerability"</a></p>
+<p><a href="http://www.pcworld.com/article/255110/php_working_on_new_patch_for_critical_vulnerability_after_initial_one_failed.html">PHP Working on New Patch for Critical Vulnerability After Initial One Failed</a></p>
 {% endblock %}
