--- a/templates/rails/online.html
+++ b/templates/rails/online.html
@@ -3,5 +3,5 @@
 <h1>Probably still fucked</h1>
 <h2>"rails security vulnerability" About 2,260,000 results (0.20 seconds)</h2>
 
-<a href="http://david.heinemeierhansson.com/2012/rails-is-omakase.html">It's pronounced "oh-ma-ka-say"</a>
+<p><a href="http://david.heinemeierhansson.com/2012/rails-is-omakase.html">It's pronounced "oh-ma-ka-say"</a></p>
 {% endblock %}
